tests/ui/rfcs/rfc-2632-const-trait-impl/trait-default-body-stability.stderr
error: const `impl` for trait `Try` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |            ^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `FromResidual` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:33:12
   |
LL | impl const FromResidual for T {
   |            ^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/trait-default-body-stability.rs:18:6
   |
LL | impl const Try for T {
   |      ^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/trait-default-body-stability.rs:33:6
   |
LL | impl const FromResidual for T {
   |      ^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:33:6
   |
LL | impl const FromResidual for T {
   |      ^^^^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `Try`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |      ----- ^^^     ^
   |      |
   |      unsatisfied trait bound introduced here

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:44:9
   |
LL |         T?
   |         ^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `Try`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |      ----- ^^^     ^
   |      |
   |      unsatisfied trait bound introduced here

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:44:9
   |
LL |         T?
   |         ^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `FromResidual<T>`
  --> $DIR/trait-default-body-stability.rs:33:12
   |
LL | impl const FromResidual for T {
   |      ----- ^^^^^^^^^^^^     ^
   |      |
   |      unsatisfied trait bound introduced here

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:44:9
   |
LL |         T?
   |         ^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `Try`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |      ----- ^^^     ^
   |      |
   |      unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:44:9
   |
LL |         T?
   |         ^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `FromResidual<T>`
  --> $DIR/trait-default-body-stability.rs:33:12
   |
LL | impl const FromResidual for T {
   |      ----- ^^^^^^^^^^^^     ^
   |      |
   |      unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0284]: type annotations needed
  --> $DIR/trait-default-body-stability.rs:44:9
   |
LL |         T?
   |         ^^ cannot infer the value of the constant `_`
   |
note: required for `T` to implement `Try`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |      ----- ^^^     ^
   |      |
   |      unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0207, E0284.
For more information about an error, try `rustc --explain E0207`.
